fixed some spacing errors on resize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+html {
+	position: relative;
+}
 body {
 	margin: 0;
 	height: 100%;
@@ -52,7 +55,6 @@ p {
 
 .content {
 	width: 100%;
-	margin-top: 25px;
 }
 
 #contentArea {
@@ -121,6 +123,7 @@ footer > p {
 	height: 100%;
 	border: 1px solid #CCC;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	margin-top: 25px;
 }
 
 
